--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
+    "flow-bin": "^0.100.0",
+    "react-router-dom": "^5.0.1"
   }
 }
