--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
   "devDependencies": {
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "flow-bin": "^0.100.0",
+    "mongoose": "^5.5.13",
     "react-router-dom": "^5.0.1"
   }
 }
