setup react with express

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -36,6 +37,7 @@
     "express": "^4.17.1",
     "flow-bin": "^0.100.0",
     "mongoose": "^5.5.13",
+    "nodemon": "^1.19.1",
     "react-router-dom": "^5.0.1"
   }
 }
