--- a/server/config.json
+++ b/server/config.json
@@ -2,6 +2,7 @@
   "port": 8080,
   "mongoose": {
     "uri": "mongodb://localhost/todo",
-    "options": {}
+    "options": { "useNewUrlParser": true },
+    "debug": true
   }
 }
