--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "@material-ui/icons": "^4.0.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "flow-bin": "^0.100.0",
     "mongoose": "^5.5.13",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "react-router-dom": "^5.0.1"
   }
